add zkinfo command
displays merch pubkey for merchant
